--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   json_annotation: ^3.1.0
   cached_network_image: ^2.1.0+1
   optimized_cached_image: ^1.0.0
+  webview_flutter: ^0.3.24
+  path_provider: ^1.6.18
 
 dev_dependencies:
   flutter_test:
