--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   optimized_cached_image: ^1.0.0
   webview_flutter: ^0.3.24
   path_provider: ^1.6.18
+  floor: ^0.14.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   json_serializable: ^3.5.0
   build_runner: ^1.10.0
+  floor_generator: ^0.14.0
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
